--- a/CorrectBrackets/03.CorrectBrackets.csproj
+++ b/CorrectBrackets/03.CorrectBrackets.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B43721DD-B8FE-43F3-8A60-609DE2FA01C0}</ProjectGuid>
+    <ProjectGuid>{C273D3B2-88C8-41E4-A0BD-43478BF748AC}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CorrectBrackets</RootNamespace>
-    <AssemblyName>CorrectBrackets</AssemblyName>
+    <RootNamespace>ConsoleApplication1</RootNamespace>
+    <AssemblyName>ConsoleApplication1</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
